--- a/minimal-api/minimal-api.csproj
+++ b/minimal-api/minimal-api.csproj
@@ -7,4 +7,9 @@
         <RootNamespace>minimal_api</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.13" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.13" />
+    </ItemGroup>
+
 </Project>
